# Mentci-AI

./: .attrs.json  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURAL_GUIDELINES.md  ARCHITECTURE.md  BLEEDING_EDGE_MODELS.md  BUGS.md  CHRONOGRAPHY.md  Cargo.toml  GUIDE_TO_LEVEL5_AGENTIC_ENGINEERING.md  JAIL_COMMIT_PROTOCOL.md  Level5-Ai-Coding.md  MIGRATION_GEMINI_TO_OPENCODE.md  README.md  RESTART_CONTEXT.md  ROADMAP_TO_LEVEL5.md  SETUP_DEEPSEEK.md  TOOLS.md  Work.md  agent-inputs.edn  build.rs  flake.nix  inputs.aski-fs  jail.nix  jail_launcher.py  jj-project-config.toml  package-lock.json  patch_cargo.py  run_pycapnp.nix  test.json  test.md  test_adaptive_loop.sh  test_capnp_req.py  test_req.capnp  vtcode.toml
.pi/: mcp.json  (+3 more)
Components/: Cargo.toml  index.edn  stability-index.edn
Components/aski-cli/: Cargo.toml
Components/aski-cli/src/: main.rs
Components/aski-lib/: Cargo.toml
Components/aski-lib/src/: projector.rs
Components/chronos/: Cargo.toml
Components/chronos-lib/: Cargo.toml
Components/chronos-lib/src/: lib.rs
Components/chronos-lib/tests/: chronos_cli.rs
Components/chronos/src/: main.rs
Components/chronos/tests/: chronos_cli.rs
Components/contracts/: rust-component-repos.toml
Components/criome-contract/schema/: criome_init.capnp
Components/criome-core/: Cargo.toml
Components/criome-core/src/: contracts.rs  engine.rs  lib.rs  state.rs
Components/criome-core/tests/: mvp_flow.rs
Components/mentci-aid/: Cargo.toml
Components/mentci-aid/schema/: mentci.capnp
Components/mentci-aid/src/: lib.rs  main.rs  sandbox.rs
Components/mentci-aid/tests/: execute_tool.rs
Components/mentci-box/: Cargo.toml  INSTRUCTIONS.md  SOURCE_FS.aski  default_request.txt
Components/mentci-box-lib/: Cargo.toml  INSTRUCTIONS.md  SOURCE_FS.aski  build.rs
Components/mentci-box-lib/schema/: mentci_box.capnp
Components/mentci-box-lib/src/: lib.rs
Components/mentci-box/src/: main.rs
Components/mentci-box/tests/: integration_test.rs  internal_test.sh  test_request.txt
Components/mentci-datalog/: Cargo.toml
Components/mentci-datalog/data/: world_schema.cozo
Components/mentci-datalog/src/: lib.rs
Components/mentci-datalog/tests/: world_evolution.rs
Components/mentci-dig/: Cargo.toml  build.rs
Components/mentci-dig/src/: main.rs
Components/mentci-fs/: Cargo.toml
Components/mentci-fs/src/: lib.rs
Components/mentci-intel/data/: intelligence.edn  intelligence.txt  sync.sh
Components/mentci-intel/schema/: intelligence.capnp
Components/mentci-launch/: Cargo.toml  build.rs
Components/mentci-launch/src/: lib.rs  main.rs
Components/mentci-launch/tests/: launch_request.rs
Components/mentci-mcp/: Cargo.toml  build.rs
Components/mentci-mcp-gateway/: Cargo.toml  README.md
Components/mentci-mcp-gateway/src/: main.rs
Components/mentci-mcp/capnp/: Cargo.toml
Components/mentci-mcp/core/: Cargo.toml
Components/mentci-mcp/edit/: Cargo.toml
Components/mentci-mcp/jj/: Cargo.toml
Components/mentci-mcp/src/: capnp_tools.rs  main.rs  schema.rs
Components/mentci-policy-engine/: Cargo.toml  README.md
Components/mentci-policy-engine/src/: lib.rs
Components/mentci-stt/: Cargo.toml  build.rs  default_config.capnp  skill.md
Components/mentci-stt/data/: default_request.edn  default_request.txt  sync.sh
Components/mentci-stt/schema/: stt.capnp
Components/mentci-stt/src/: main.rs  schema.rs
Components/mentci-user/: Cargo.toml  build.rs  default.nix
Components/mentci-user/data/: setup.json  setup.txt  sync.sh
Components/mentci-user/src/: lib.rs  main.rs
Components/mentci-vcs/: Cargo.toml
Components/mentci-vcs/src/: lib.rs  main.rs
Components/nix/: attractor.nix  chronos-lib.nix  chronos.nix  coding_agent.nix  coding_agent_check.nix  common_packages.nix  components_index_check.nix  default.nix  dev_shell.nix  execute.nix  execute_check.nix  gemini-cli.nix  gemini-tui.nix  jail.nix  jail_inputs.nix  jail_sources.nix  jcodemunch-mcp.nix  mentci-box-default.nix  mentci_ai.nix  mentci_bootstrap.nix  mentci_box.nix  mentci_jail_run.nix  mentci_jj.nix  mentci_launch.nix  mentci_mcp.nix  mentci_stt.nix  mentci_user.nix  mentci_vcs.nix  mk-shell.nix  pi-dev.nix  pi-linkup-extension.nix  pi-mcp-adapter-extension.nix  pi-rust.nix  pi-with-extensions.nix  pi.nix  pi_agent_rust.nix  pi_check.nix  pi_with_extensions_check.nix  unified_llm.nix  vtcode.nix  (+1 more)
Components/nix-hash-patcher/: Cargo.toml
Components/nix-hash-patcher/src/: lib.rs  main.rs
Components/pi-mentci/: README.md  index.ts
Components/samskara/: Cargo.toml  README.md  build.rs
Components/samskara/schema/: samskara_jj.capnp
Components/samskara/src/: lib.rs  main.rs
Components/samskara/templates/: samskarize_jj.tmpl
Components/schema/: aski_astral.aski-spec.edn  aski_astral.edn  atom_filesystem.capnp  mcp.capnp  mentci.capnp  mentci_box.capnp  mentci_mcp_gateway.capnp  mentci_tools.capnp  mentci_vcs.capnp  user.capnp
Components/scripts/admin_shell/: TESTING_CONTEXT.md  main.clj
Components/scripts/agent_launcher/: main.clj
Components/scripts/answer_report/: TESTING_CONTEXT.md  main.clj
Components/scripts/aski_flow_dot/: main.clj
Components/scripts/commit/: main.clj
Components/scripts/component_registry/: TESTING_CONTEXT.md  main.clj
Components/scripts/extension_index/: TESTING_CONTEXT.md  main.clj
Components/scripts/inputs_mounter/: TESTING_CONTEXT.md  main.clj
Components/scripts/inputs_remount/: TESTING_CONTEXT.md  main.clj  test.clj
Components/scripts/intent/: main.clj
Components/scripts/interrupted_job_queue/: TESTING_CONTEXT.md  main.clj  test.clj
Components/scripts/jail_key_setup/: TESTING_CONTEXT.md  main.clj
Components/scripts/jj_workflow/: main.clj
Components/scripts/launcher/: TESTING_CONTEXT.md  main.clj
Components/src/: main.rs
Components/tests/: aski_flow_dot_test.clj  attractor_harness.rs  jail_push_ssh.rs
Components/tools/: pi-sync-extensions.bb
Components/workflows/: attractor-seed.aski-flow  attractor-specify.aski-flow  example.dot  idea_pipeline.dot  mentci.aski-fs  mentci.aski-fs.deps.edn  stt_context_terms.edn
(+1248 files in other folders)
