[workspace]
resolver = "2"
members = [
    "Components/mentci-aid",
    "Components/chronos",
    "Components/mentci-fs",
    "Components/mentci-box",
    "Components/mentci-launch",
    "Components/mentci-box-lib",
    "Components/mentci-stt",
    "Components/mentci-user",
    "Components/mentci-dig",
    "Components/mentci-mcp",
    "Components/mentci-mcp/core",
    "Components/mentci-mcp/jj",
    "Components/mentci-mcp/capnp",
    "Components/mentci-mcp/edit",
    "Components/mentci-policy-engine",
    "Components/mentci-mcp-gateway",
    "Components/aski-lib",
    "Components/aski-cli"
]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
