[workspace]
resolver = "2"
members = [
    "Components/mentci-datalog",
    "Components/mentci-aid",
    "Components/chronos",
    "Components/mentci-fs",
    "Components/mentci-box",
    "Components/mentci-launch",
    "Components/mentci-box-lib",
    "Components/mentci-stt",
    "Components/mentci-user",
    "Components/samskara",
    "Components/mentci-dig",
    "Components/mentci-mcp",
    "Components/mentci-mcp/core",
    "Components/mentci-mcp/jj",
    "Components/mentci-mcp/capnp",
    "Components/mentci-mcp/edit",
    "Components/mentci-policy-engine",
    "Components/mentci-mcp-gateway",
    "Components/mentci-vcs",
    "Components/aski-lib",
    "Components/aski-cli",
    "Components/nix-hash-patcher",
    "Components/criome-core"
]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
