[package]
name = "aski-lib"
version = "0.1.0"
edition = "2021"
description = "A sophisticated Clojure/EDN-style reader for the Aski syntax."

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pest = "2.8"
pest_derive = "2.8"
edn-rs = "0.17"
toml = "0.8"
tracing = "0.1"
