[package]
name = "chronos"
version = "0.1.0"
edition = "2021"
description = "Solar ordinal-zodiac chronography utility"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[[bin]]
name = "chronos"
path = "src/main.rs"
