[package]
name = "mentci-fs"
version = "0.1.0"
edition = "2021"
description = "High-efficiency localized filesystem indexing for Mentci-AI."

[[bin]]
name = "mentci-fs"
path = "src/bin/mentci-fs.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
edn-rs = "0.17"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.15"
