[package]
name = "mentci-mcp"
version = "0.1.0"
edition = "2021"
description = "Mentci-AI Model Context Protocol (MCP) Server"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
capnp = "0.19"
structopt = "0.3"
ast-grep-core = "0.41.0"
ast-grep-language = "0.41.0"

[build-dependencies]
capnpc = "0.19"
