[package]
name = "mentci-mcp"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0"
aski-lib = { version = "0.1.0", path = "../aski-lib" }
ast-grep-core = "0.41.0"
ast-grep-language = "0.41.0"
base64 = "0.22.1"
capnp = "0.21"
serde_json = "1.0"
sha2 = "0.10.9"

[build-dependencies]
capnpc = "0.21"
