[package]
name = "mentci-stt"
version = "0.1.0"
edition = "2021"
description = "Mentci-AI Speech-to-Text Transcription via Gemini 2.5 Flash"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.22"
structopt = "0.3"

capnp = "0.19"
mentci-box-lib = { path = "../mentci-box-lib" }
mentci-user = { path = "../mentci-user" }

[build-dependencies]
capnpc = "0.19"
