[package]
name = "samskara"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
capnp = "0.19"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "samskara-verify"
path = "src/bin/verify.rs"

[[bin]]
name = "mentci-flow"
path = "src/bin/mentci_flow.rs"

[[bin]]
name = "fractalize"
path = "src/bin/fractalize.rs"

[[bin]]
name = "samskara"
path = "src/main.rs"

[build-dependencies]
capnpc = "0.19"
