[package]
name = "samskara"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
capnp = "0.19"
cozo = { version = "0.7.6", default-features = false, features = ["storage-sqlite", "rayon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
capnpc = "0.19"
